allow console to call functions with numbers (and other symbols) in it's identifier

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "ryohey",
   "license": "MIT",
   "devDependencies": {
+    "esbuild": "^0.25.2",
+    "rollup": "^4.36.0",
     "prettier": "^3.5.3",
     "turbo": "^2.4.4"
   },
